Исправил баг с значками группировок

--- a/data/campanings/scs/scenarios/3Limansk/Main.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Main.ini
@@ -691,36 +691,36 @@ Renegats4-Weapon=GP
 Renegats4-Armor=Freelancers-4
 
 ClearSky1-Name=Опытный
-ClearSky1-Img=data\campanings\shoc\gfx\icons\units\ClearSky\1.png
+ClearSky1-Img=data\campanings\scs\gfx\icons\units\ClearSky\1.png
 ClearSky1-Weapon=MP5
 ClearSky1-Armor=Freelancers-1
 ClearSky2-Name=Ветеран
-ClearSky2-Img=data\campanings\shoc\gfx\icons\units\ClearSky\3.png
+ClearSky2-Img=data\campanings\scs\gfx\icons\units\ClearSky\3.png
 ClearSky2-Weapon=AKM
 ClearSky2-Armor=Freelancers-2
 ClearSky3-Name=Мастер
-ClearSky3-Img=data\campanings\shoc\gfx\icons\units\ClearSky\9.png
+ClearSky3-Img=data\campanings\scs\gfx\icons\units\ClearSky\9.png
 ClearSky3-Weapon=TPC
 ClearSky3-Armor=Freelancers-3A
 ClearSky4-Name=Легенда
-ClearSky4-Img=data\campanings\shoc\gfx\icons\units\ClearSky\5.png
+ClearSky4-Img=data\campanings\scs\gfx\icons\units\ClearSky\5.png
 ClearSky4-Weapon=GP
 ClearSky4-Armor=Freelancers-4
 
 Zombie1-Name=Новичок
-Zombie1-Img=data\campanings\shoc\gfx\icons\units\Zombie\1.png
+Zombie1-Img=data\campanings\scs\gfx\icons\units\Zombie\1.png
 Zombie1-Weapon=PM
 Zombie1-Armor=Stalker-2
 Zombie2-Name=Опытный
-Zombie2-Img=data\campanings\shoc\gfx\icons\units\Zombie\2.png
+Zombie2-Img=data\campanings\scs\gfx\icons\units\Zombie\2.png
 Zombie2-Weapon=AKU
 Zombie2-Armor=Soldiers-1
 Zombie3-Name=Ветеран
-Zombie3-Img=data\campanings\shoc\gfx\icons\units\Zombie\3.png
+Zombie3-Img=data\campanings\scs\gfx\icons\units\Zombie\3.png
 Zombie3-Weapon=AKM
 Zombie3-Armor=Freelancers-1
 Zombie4-Name=Мастер
-Zombie4-Img=data\campanings\shoc\gfx\icons\units\Zombie\4.png
+Zombie4-Img=data\campanings\scs\gfx\icons\units\Zombie\4.png
 Zombie4-Weapon=SPSA
 Zombie4-Armor=Stalker-4
 
