--- a/data/campanings/scs/scenarios/3Limansk/Main.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Main.ini
@@ -674,19 +674,19 @@ Monolith4-Weapon=SGI
 Monolith4-Armor=Stalker-4
 
 Renegats1-Name=Опытный
-Renegats1-Img=data\campanings\shoc\gfx\icons\units\Renegats\1.png
+Renegats1-Img=data\campanings\scs\gfx\icons\units\Renegats\1.png
 Renegats1-Weapon=MP5
 Renegats1-Armor=Freelancers-1
 Renegats2-Name=Ветеран
-Renegats2-Img=data\campanings\shoc\gfx\icons\units\Renegats\3.png
+Renegats2-Img=data\campanings\scs\gfx\icons\units\Renegats\3.png
 Renegats2-Weapon=AKM
 Renegats2-Armor=Freelancers-2
 Renegats3-Name=Мастер
-Renegats3-Img=data\campanings\shoc\gfx\icons\units\Renegats\9.png
+Renegats3-Img=data\campanings\scs\gfx\icons\units\Renegats\9.png
 Renegats3-Weapon=TPC
 Renegats3-Armor=Freelancers-3A
 Renegats4-Name=Легенда
-Renegats4-Img=data\campanings\shoc\gfx\icons\units\Renegats\5.png
+Renegats4-Img=data\campanings\scs\gfx\icons\units\Renegats\5.png
 Renegats4-Weapon=GP
 Renegats4-Armor=Freelancers-4
 
@@ -708,19 +708,19 @@ ClearSky4-Weapon=GP
 ClearSky4-Armor=Freelancers-4
 
 Zombie1-Name=Новичок
-Zombie1-Img=data\campanings\scs\gfx\icons\units\Zombie\1.png
+Zombie1-Img=data\campanings\shoc\gfx\icons\units\Zombie\1.png
 Zombie1-Weapon=PM
 Zombie1-Armor=Stalker-2
 Zombie2-Name=Опытный
-Zombie2-Img=data\campanings\scs\gfx\icons\units\Zombie\2.png
+Zombie2-Img=data\campanings\shoc\gfx\icons\units\Zombie\2.png
 Zombie2-Weapon=AKU
 Zombie2-Armor=Soldiers-1
 Zombie3-Name=Ветеран
-Zombie3-Img=data\campanings\scs\gfx\icons\units\Zombie\3.png
+Zombie3-Img=data\campanings\shoc\gfx\icons\units\Zombie\3.png
 Zombie3-Weapon=AKM
 Zombie3-Armor=Freelancers-1
 Zombie4-Name=Мастер
-Zombie4-Img=data\campanings\scs\gfx\icons\units\Zombie\4.png
+Zombie4-Img=data\campanings\shoc\gfx\icons\units\Zombie\4.png
 Zombie4-Weapon=SPSA
 Zombie4-Armor=Stalker-4
 
