--- a/data/campanings/scs/scenarios/3Limansk/Settings.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Settings.ini
@@ -1,4 +1,4 @@
-﻿[Main]
+[Main]
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; ScenarioNameFolder - название папки													;;
 ;; ScenarioName - отображаемое название сценария											;;
@@ -21,6 +21,10 @@
 ;; End-Standart-Lose - включено ли стандартное поражение по потери всех территорий в сценарии						;;
 ;; End-Step-Victory - включена ли победа в сценарии, если игрок доживет до указанного в EndStep хода					;;
 ;; End-Step-Lose - включено ли поражение в сценарии, если игрок достигнет указанного в EndStep хода					;;
+;; End-EventFlag-Victory - включена ли победа по ивент флагу										;;
+;; End-EventFlag-Lose - включено ли поражение по ивент флагу										;;
+;; End-EventFlag-Victory-Number - номер ивент флага по которому будет проверяться победа						;;
+;; End-EventFlag-Lose-Number - номер ивент флага по которому будет проверяться поражение						;;
 ;; EndStep - счетчик хода														;;
 ;; UnitCostModificator - модификатор стоимости юнитов в сценарии. Цена юнита = цена оружия + цена брони + ранг * этот_модификатор	;;
 ;; AmbientSoundTimer - интервал в милесекундах между воспроизведением фоновых звуков							;;
@@ -40,11 +44,15 @@
 ;; AtackArmyThroughtAllyDefault - значение по умолчанию для атака противника через территорию союзника					;;
 ;; AtackArmyThroughtAllyCanChange - возможность изменить настройку атака противника через территорию союзника				;;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+;; Описание
 ScenarioNameFolder=3Limansk
 ScenarioName=Прорыв к центру
 ScenarioDescription=Сценарий, который довольно близок к лору. Группировка "Чистое Небо" прорывается на север через Рыжий Лес, Лиманск, Госпиталь и ЧАЭС. У вас около 100 ходов, удачи! Передислокация и атака через территорию союзников в этом сценарии отключены.
 ScenarioLogo-Standart=data\campanings\scs\gfx\Scenario_Logo_Border.png
 ScenarioLogo-Active=data\campanings\scs\gfx\Scenario_Logo_Border-Active.png
+
+;; Настройки
 Achievements=True
 AchievementsCount = 4
 EventsRandomDefault=True
@@ -52,26 +60,24 @@ EventsRandomCanChange=True
 EventsStoryDefault=True
 EventsStoryCanChange=False
 CountZones=32
+MoveArmyThroughAllyDefault=False
+MoveArmyThroughAllyCanChange=False
+AtackArmyThroughtAllyDefault=False
+AtackArmyThroughtAllyCanChange=False
 BurstDefault=True								
 BurstCanChange=False								
 ActiveMutantsEveryRound=True
+
+;; Настройка базового баланса
 ActiveMutantAddEveryPercent=5
 ActiveMutantScaleForMutantUnit1=1
 ActiveMutantScaleForMutantUnit2=25
 ActiveMutantScaleForMutantUnit3=50
 ActiveMutantScaleForMutantUnit4=75
-EndRoundChangeResources=True
-End-Standart-Victory = True
-End-Standart-Lose = True
-End-Step-Victory = False
-End-Step-Lose = True
-EndStep = 51
 UnitCostModificator = 50
-AmbientSoundTimer=30000
 SpyCostCRModificator=2
 SpyBasedChanceCountForReconnaissance=40
 SpyBasedCostMoneyForReconnaissance=180
-MusicCheckTimer=2000
 BasedChanceForSearchArts=40
 BasedChanceOfDethForSearchArts=5
 CountUpgrades=21
@@ -79,10 +85,22 @@ BasedCostArmyMove=3
 BasedCostAtackType1=4
 BasedCostAtackType2=6
 BasedCostKillMutants=3
-MoveArmyThroughAllyDefault=False
-MoveArmyThroughAllyCanChange=False
-AtackArmyThroughtAllyDefault=False
-AtackArmyThroughtAllyCanChange=False
+
+;; Условия победы и поражения
+EndRoundChangeResources=True
+End-Standart-Victory = True
+End-Standart-Lose = True
+End-Step-Victory = False
+End-Step-Lose = True
+End-EventFlag-Victory = False
+End-EventFlag-Lose = False
+End-EventFlag-Victory-Number = 8
+End-EventFlag-Lose-Number = 9
+EndStep = 51
+
+;; Настройка звукового сопровожения
+AmbientSoundTimer=30000
+MusicCheckTimer=2000
 [Groups]
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; Техническое название группировки, False если отключена. Используется в окне выбора группировки игроком	;;
