--- a/data/campanings/scs/scenarios/3Limansk/Settings.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Settings.ini
@@ -231,6 +231,10 @@ Large-Food-Icon = data\campanings\shoc\gfx\icons\goods\Food.png
 Large-Medic-Icon = data\campanings\shoc\gfx\icons\goods\Medic.png
 Large-Recruits-Icon = data\campanings\shoc\gfx\icons\goods\Recruits.png
 Mini-CheckMark-Icon = data\campanings\shoc\gfx\interface\CheckMarkGreen.png
+ActiveMutants-Icon = data\campanings\shoc\gfx\interface\ActivMutants.png
+Recruits-Icon = data\campanings\shoc\gfx\interface\Recruits.png
+CountStepsAtherSearch-Icon = data\campanings\shoc\gfx\interface\SearchArts.png
+SpawnArts-Icon = data\campanings\shoc\gfx\interface\TypeArts.png
 
 [Graphics-BTN-Standart]
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
