Прописал тип зон

--- a/data/campanings/scs/scenarios/3Limansk/Territories.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Territories.ini
@@ -288,3 +288,37 @@ Zona32-Novice = 0
 Zona32-Skilled = 0
 Zona32-Veteran = 1
 Zona32-Master = 0
+[Zona-TypeLand]
+Zona0 = None
+Zona1 = Buildings
+Zona2 = Buildings
+Zona3 = Buildings
+Zona4 = Buildings
+Zona5 = Buildings
+Zona6 = Buildings
+Zona7 = Buildings
+Zona8 = Buildings
+Zona9 = Ruins
+Zona10 = City
+Zona11 = City
+Zona12 = City
+Zona13 = City
+Zona14 = City
+Zona15 = City
+Zona16 = Blockpost
+Zona17 = City
+Zona18 = City
+Zona19 = City
+Zona20 = Forest
+Zona21 = Forest
+Zona22 = City
+Zona23 = FortifiedBlockpost
+Zona24 = Tunnel
+Zona25 = Forest
+Zona26 = Forest
+Zona27 = Forest
+Zona28 = Forest
+Zona29 = Bridge
+Zona30 = Blockpost
+Zona31 = Forest
+Zona32 = NarrowPassage
