Изменил название одного из достижений

--- a/data/campanings/scs/scenarios/3Limansk/Achievements.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Achievements.ini
@@ -39,7 +39,7 @@ Fraction1=0
 Img=data\campanings\shoc\gfx\icons\achievements\Taked.png
 ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\9.png
 ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\9.png
-Name= Выжить!
+Name= Чистый центр!
 Desc = Получено новое достижение! Захватить центр зоны за Чистое Небо
 Desc-Logo = Захватить центр зоны за Чистое Небо
 DifficultyLevel = Any
