--- a/data/campanings/scs/scenarios/3Limansk/Main.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Main.ini
@@ -676,36 +676,36 @@ Monolith4-Armor=Stalker-4
 Renegats1-Name=Опытный
 Renegats1-Img=data\campanings\scs\gfx\icons\units\Renegats\1.png
 Renegats1-Weapon=MP5
-Renegats1-Armor=Freelancers-1
+Renegats1-Armor=Renegats-1
 Renegats2-Name=Ветеран
 Renegats2-Img=data\campanings\scs\gfx\icons\units\Renegats\3.png
 Renegats2-Weapon=AKM
-Renegats2-Armor=Freelancers-2
+Renegats2-Armor=Renegats-2
 Renegats3-Name=Мастер
 Renegats3-Img=data\campanings\scs\gfx\icons\units\Renegats\9.png
-Renegats3-Weapon=TPC
-Renegats3-Armor=Freelancers-3A
+Renegats3-Weapon=Val
+Renegats3-Armor=Renegats-3A
 Renegats4-Name=Легенда
 Renegats4-Img=data\campanings\scs\gfx\icons\units\Renegats\5.png
 Renegats4-Weapon=GP
-Renegats4-Armor=Freelancers-4
+Renegats4-Armor=Renegats-4
 
 ClearSky1-Name=Опытный
 ClearSky1-Img=data\campanings\scs\gfx\icons\units\ClearSky\1.png
-ClearSky1-Weapon=MP5
-ClearSky1-Armor=Freelancers-1
+ClearSky1-Weapon=Gun
+ClearSky1-Armor=CS-1
 ClearSky2-Name=Ветеран
 ClearSky2-Img=data\campanings\scs\gfx\icons\units\ClearSky\3.png
-ClearSky2-Weapon=AKM
-ClearSky2-Armor=Freelancers-2
+ClearSky2-Weapon=MP5
+ClearSky2-Armor=CS-2
 ClearSky3-Name=Мастер
 ClearSky3-Img=data\campanings\scs\gfx\icons\units\ClearSky\9.png
 ClearSky3-Weapon=TPC
-ClearSky3-Armor=Freelancers-3A
+ClearSky3-Armor=CS-3A
 ClearSky4-Name=Легенда
 ClearSky4-Img=data\campanings\scs\gfx\icons\units\ClearSky\5.png
 ClearSky4-Weapon=GP
-ClearSky4-Armor=Freelancers-4
+ClearSky4-Armor=CS-4
 
 Zombie1-Name=Новичок
 Zombie1-Img=data\campanings\shoc\gfx\icons\units\Zombie\1.png
