--- a/data/campanings/scs/scenarios/3Limansk/Groups.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Groups.ini
@@ -464,6 +464,110 @@ Group16 = 0
 Group17 = 1
 Group18 = 0
 
+[Groups-BasedLimitResource]
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; Базовый лимиты на КР и каждый ранг рекрутов ;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+Group0-Comands = 100
+Group1-Comands = 25
+Group2-Comands = 20
+Group3-Comands = 35
+Group4-Comands = 30
+Group5-Comands = 30
+Group6-Comands = 32
+Group7-Comands = 28
+Group8-Comands = 22
+Group9-Comands = 18
+Group10-Comands = 23
+Group11-Comands = 0
+Group12-Comands = 0
+Group13-Comands = 0
+Group14-Comands = 0
+Group15-Comands = 0
+Group16-Comands = 0
+Group17-Comands = 50
+Group18-Comands = 0
+
+Group0-Novice = 10
+Group1-Novice = 6
+Group2-Novice = 6
+Group3-Novice = 7
+Group4-Novice = 5
+Group5-Novice = 5
+Group6-Novice = 5
+Group7-Novice = 4
+Group8-Novice = 4
+Group9-Novice = 6
+Group10-Novice = 5
+Group11-Novice = 5
+Group12-Novice = 5
+Group13-Novice = 5
+Group14-Novice = 5
+Group15-Novice = 5
+Group16-Novice = 5
+Group17-Novice = 5
+Group18-Novice = 0
+
+Group0-Skilled = 9
+Group1-Skilled = 5
+Group2-Skilled = 5
+Group3-Skilled = 4
+Group4-Skilled = 5
+Group5-Skilled = 5
+Group6-Skilled = 4
+Group7-Skilled = 3
+Group8-Skilled = 4
+Group9-Skilled = 4
+Group10-Skilled = 4
+Group11-Skilled = 4
+Group12-Skilled = 4
+Group13-Skilled = 4
+Group14-Skilled = 4
+Group15-Skilled = 4
+Group16-Skilled = 4
+Group17-Skilled = 4
+Group18-Skilled = 0
+
+Group0-Veteran = 8
+Group1-Veteran = 3
+Group2-Veteran = 3
+Group3-Veteran = 3
+Group4-Veteran = 3
+Group5-Veteran = 3
+Group6-Veteran = 4
+Group7-Veteran = 4
+Group8-Veteran = 3
+Group9-Veteran = 3
+Group10-Veteran = 3
+Group11-Veteran = 3
+Group12-Veteran = 3
+Group13-Veteran = 3
+Group14-Veteran = 3
+Group15-Veteran = 3
+Group16-Veteran = 3
+Group17-Veteran = 4
+Group18-Veteran = 0
+
+Group0-Master = 7
+Group1-Master = 2
+Group2-Master = 2
+Group3-Master = 2
+Group4-Master = 2
+Group5-Master = 2
+Group6-Master = 4
+Group7-Master = 2
+Group8-Master = 2
+Group9-Master = 2
+Group10-Master = 2
+Group11-Master = 2
+Group12-Master = 2
+Group13-Master = 2
+Group14-Master = 2
+Group15-Master = 2
+Group16-Master = 2
+Group17-Master = 5
+Group18-Master = 0
+
 [Group-Spy-Name]
 Group0-Spy1 = Новичок
 Group0-Spy2 = Опытный
@@ -773,6 +877,86 @@ Group17-Img = data\campanings\shoc\gfx\icons\ends\timer_def.png
 Group17-Text = Время истекло, Вы успели сгнить прежде чем смогли добиться захвата Армейских складов. Поражение!
 Group18-Img = data\campanings\shoc\gfx\icons\ends\timer_def.png
 Group18-Text = Время истекло, поражение по окончанию сценария
+
+[Groups-End-EventFlag-Victory]
+Group0-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group0-Text = Победа по ивент флагу!
+Group1-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group1-Text = Победа по ивент флагу!
+Group2-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group2-Text = Победа по ивент флагу!
+Group3-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group3-Text = Победа по ивент флагу!
+Group4-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group4-Text = Победа по ивент флагу!
+Group5-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group5-Text = Победа по ивент флагу!
+Group6-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group6-Text = Победа по ивент флагу!
+Group7-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group7-Text = Победа по ивент флагу!
+Group8-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group8-Text = Победа по ивент флагу!
+Group9-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group9-Text = Победа по ивент флагу!
+Group10-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group10-Text = Победа по ивент флагу!
+Group11-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group11-Text = Победа по ивент флагу!
+Group12-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group12-Text = Победа по ивент флагу!
+Group13-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group13-Text = Победа по ивент флагу!
+Group14-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group14-Text = Победа по ивент флагу!
+Group15-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group15-Text = Победа по ивент флагу!
+Group16-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group16-Text = Победа по ивент флагу!
+Group17-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group17-Text = Победа по ивент флагу!
+Group18-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group18-Text = Победа по True у ивентфлага под номером указанного в Settings.ini
+
+[Groups-End-EventFlag-Lose]
+Group0-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group0-Text = Поражение по ивент флагу!
+Group1-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group1-Text = Поражение по ивент флагу!
+Group2-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group2-Text = Поражение по ивент флагу!
+Group3-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group3-Text = Поражение по ивент флагу!
+Group4-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group4-Text = Поражение по ивент флагу!
+Group5-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group5-Text = Поражение по ивент флагу!
+Group6-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group6-Text = Поражение по ивент флагу!
+Group7-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group7-Text = Поражение по ивент флагу!
+Group8-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group8-Text = Поражение по ивент флагу!
+Group9-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group9-Text = Поражение по ивент флагу!
+Group10-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group10-Text = Поражение по ивент флагу!
+Group11-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group11-Text = Поражение по ивент флагу!
+Group12-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group12-Text = Поражение по ивент флагу!
+Group13-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group13-Text = Поражение по ивент флагу!
+Group14-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group14-Text = Поражение по ивент флагу!
+Group15-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group15-Text = Поражение по ивент флагу!
+Group16-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group16-Text = Поражение по ивент флагу!
+Group17-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group17-Text = Поражение по ивент флагу!
+Group18-Img = data\campanings\shoc\gfx\icons\ends\def.png
+Group18-Text = Поражение по True у ивентфлага под номером указанного в Settings.ini
 
 [Groups-DiplomacyText]
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
